# netdevops-gns3

./: LICENSE  README.md  pyproject.toml
ansible/: ansible.cfg  configure.yaml  gather_commands.yaml
ansible/templates/: config.j2
app/: ansible.py  constants.py  device.py  dhcp.py  gns3_link.py  gns3_node.py  gns3_project.py  lab.py  nornir.py  utils.py
app/templates/: dhcp.j2  router.j2
nornir/: config.yaml  requirements.txt
nornir/inventory/: configure.py  constants.py  gather_commands.py
nornir/templates/: config.j2
output/: dhcpd.conf
scripts/: build_inventories.py  build_topology.py  check_ssh_connectivity.py  delete_routers.py  gather_commands_asyncio.py  generate_crypto_keys.py  start_topology.py  stop_topology.py  update_configs.py
